# wave-image-styling-playground

./: .flake8  .gitignore  LICENSE  Makefile  README.md  about.md  app.toml  pyproject.toml  requirements.txt  requirements_dev.txt  start.py  style_engineering_ebook.md
GFPGAN/: inference_gfpgan.py
GFPGAN/gfpgan/: utils.py
img_styler/: caller.py  face_aligner.py  generate_videos.py  latent_editor.py  sg2_model.py
img_styler/configs/: settings.toml
img_styler/gfpgan/: __init__.py  inference_gfpgan.py  train.py  utils.py
img_styler/gfpgan/archs/: __init__.py  gfpganv1_clean_arch.py  stylegan2_clean_arch.py
img_styler/gfpgan/models/: __init__.py  gfpgan_model.py
img_styler/image_prompt/: dalle_mini_model.py  stable_diffusion.py
img_styler/image_prompt/control_net/: canny2image.py  image2image.py  scribble2image.py  share.py
img_styler/image_prompt/control_net/annotator/: __init__.py  util.py
img_styler/image_prompt/control_net/annotator/hed/: __init__.py
img_styler/image_prompt/control_net/annotator/midas/: api.py
img_styler/image_prompt/control_net/annotator/mlsd/: __init__.py
img_styler/image_prompt/control_net/annotator/openpose/: __init__.py
img_styler/image_prompt/control_net/annotator/uniformer/: __init__.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/cnn/bricks/: activation.py  conv_module.py  drop.py  norm.py  registry.py  transformer.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/cnn/utils/: flops_counter.py  sync_bn.py  weight_init.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/engine/: test.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/fileio/: file_client.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/image/: io.py  misc.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/ops/: cc_attention.py  deform_conv.py  modulated_deform_conv.py  multi_scale_deform_attn.py  nms.py  point_sample.py  points_sampler.py  roiaware_pool3d.py  saconv.py  sync_bn.py  upfirdn2d.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/parallel/: distributed.py  distributed_deprecated.py  registry.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/runner/: base_module.py  base_runner.py  checkpoint.py  default_constructor.py  epoch_based_runner.py  fp16_utils.py  iter_based_runner.py  utils.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/runner/hooks/: checkpoint.py  evaluation.py  hook.py  lr_updater.py  momentum_updater.py  optimizer.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/runner/optimizer/: default_constructor.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/utils/: config.py  env.py  trace.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/video/: io.py  optflow.py  processing.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv/visualization/: color.py  image.py  optflow.py
img_styler/image_prompt/control_net/annotator/uniformer/mmcv_custom/: checkpoint.py
img_styler/image_prompt/control_net/annotator/uniformer/mmseg/apis/: inference.py  test.py  train.py
img_styler/image_prompt/control_net/annotator/uniformer/mmseg/core/evaluation/: class_names.py  eval_hooks.py  metrics.py
img_styler/image_prompt/control_net/annotator/uniformer/mmseg/core/seg/: builder.py
img_styler/image_prompt/control_net/annotator/uniformer/mmseg/datasets/: builder.py  cityscapes.py  custom.py
img_styler/image_prompt/control_net/annotator/uniformer/mmseg/datasets/pipelines/: compose.py  formating.py  loading.py  test_time_aug.py  transforms.py
img_styler/image_prompt/control_net/annotator/uniformer/mmseg/models/: builder.py
img_styler/image_prompt/control_net/annotator/uniformer/mmseg/models/backbones/: cgnet.py  fast_scnn.py  hrnet.py  mobilenet_v2.py  mobilenet_v3.py  resnest.py  resnet.py  resnext.py  unet.py  uniformer.py  vit.py
img_styler/image_prompt/control_net/annotator/uniformer/mmseg/models/decode_heads/: ann_head.py  apc_head.py  aspp_head.py  cc_head.py  da_head.py  decode_head.py  dm_head.py  dnl_head.py  ema_head.py  enc_head.py  fcn_head.py  fpn_head.py  gc_head.py  lraspp_head.py  nl_head.py  ocr_head.py  point_head.py  psa_head.py  psp_head.py  sep_aspp_head.py  sep_fcn_head.py  uper_head.py
img_styler/image_prompt/control_net/annotator/uniformer/mmseg/models/losses/: lovasz_loss.py  utils.py
img_styler/image_prompt/control_net/annotator/uniformer/mmseg/models/necks/: fpn.py  multilevel_neck.py
img_styler/image_prompt/control_net/annotator/uniformer/mmseg/utils/: collect_env.py  logger.py
img_styler/image_prompt/control_net/cldm/: cldm.py  ddim_hacked.py  hack.py  model.py
img_styler/image_prompt/control_net/ldm/: util.py
img_styler/image_prompt/control_net/ldm/data/: util.py
img_styler/image_prompt/control_net/ldm/models/: autoencoder.py
img_styler/image_prompt/control_net/ldm/models/diffusion/: ddim.py  ddpm.py  plms.py
img_styler/image_prompt/control_net/ldm/modules/: attention.py
img_styler/image_prompt/control_net/ldm/modules/diffusionmodules/: model.py  openaimodel.py  upscaling.py  util.py
img_styler/image_prompt/control_net/ldm/modules/encoders/: modules.py
img_styler/image_prompt/control_net/ldm/modules/image_degradation/: __init__.py  bsrgan.py  bsrgan_light.py
img_styler/image_prompt/control_net/ldm/modules/midas/: api.py
img_styler/image_prompt/control_net/models/: cldm_v15.yaml  cldm_v21.yaml
img_styler/torch_utils/: persistence.py
img_styler/torch_utils/ops/: bias_act.py
img_styler/torch_utils/sg2_ops/: fused_act.py  fused_bias_act.cpp  fused_bias_act_kernel.cu  upfirdn2d.cpp  upfirdn2d.py  upfirdn2d_kernel.cu
img_styler/ui/: app.py  capture.py  common.py  components.py  handlers.py  initializers.py  layouts.py  wave_next.py
img_styler/utils/: dataops.py  logger.py  wave_utils.py
licenses/: LICENSE_Stable_Diffusion.txt
z_output/: F_1_smiling.npz  F_2_elder.npz  F_3_fun.npz  F_4_glasses.npz  M_1_bald_guy.npz  M_2_with_hair.npz  M_3_glasses.npz  baby_1.npz  baby_2.npz
(+11 files in other folders)
