[tool.poetry]
name = "wave-image-styler"
version = "0.3.1"
license = "MIT"
description = "App for styling portraits (Portrait Booth) using Machine learning and computer vision"
authors = [
  "Pramit Choudhary <pchoudha@uci.edu>",
  "Dilith Jayakody <dilithjay@gmail.com>",
  "Michal Malohlava <michal@h2o.ai>",
  "Srinivas Neppalli <srinivas.neppalli@h2o.ai>"
]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "3.7.10"
h2o-wave = "^0.22.0"
torch = "^1.10.2"
diffusers = "0.4.1"
torchvision = "^0.11.3"
numpy = "^1.21.6"
Pillow = "^9.0.1"
aiofiles = "^0.8.0"
python-multipart = "^0.0.5"
loguru = "^0.6.0"
opencv-python = "^4.5.5"
pandas = "^1.2.4"
matplotlib = "^3.5.1"
scipy = "^1.4.1"
cmake = "^3.22.2"
dlib = "^19.23.0"
requests = "^2.27.1"
deepface = "^0.0.73"
ftfy = "^6.1.1"
transformers = "^4.23.1"
ninja = "^1.10.2"

[tool.poetry.dev-dependencies]
pylint = { version = "^2.12.2", allow-prereleases = true }
flake8 = { version = "^4.0.1", allow-prereleases = true }
black = { version = "21.12b0", allow-prereleases = true }
jupyterlab = { version = "^3.2.9", allow-prereleases = true }
jupyterlab-vim = { version = "^0.14.5", allow-prereleases = true }
jupyterlab-code-formatter = { version = "^1.4.10", allow-prereleases = true }

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37.1']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | notebooks
  | local
)
'''

[tool.isort]
line_length = 120
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
